[project]
name = "quatch-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "ANN",   # type annotations
]

ignore = [
  "ANN101",  # allow missing self annotation
  "ANN102",  # allow missing cls annotation
]
